Updated html welcome-section h1.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
   <div id="welcome-section">
-    <h1>Hi.  I'm Gerrett, a Fullstack Web Developer.</h1>
+    <h1>Hi.  I'm Gerrett, a Fullstack Developer.</h1>
     <p>I love my family, watching anime, gaming, and I also love creating code to help make the world a better place.</p>
     <p>Some of my coding skills are:</p>
     <ul>
