Updated html and fixed css for responsiveness.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
 <header>
   <nav id="navbar">
     <a href="/index.html" class="nav-self">gdurbin.dev</a>
-    <a href="https://twitter.com/gwdurbin" class="twitter-ico nav-ico" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-    <a href="https://github.com/gdurbin" class="github-ico nav-ico" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
-    <a href="mailto: gerrettdurbin@gmail.com" class="email-ico nav-ico"><i class="fas fa-envelope-square fa-2x" target="_blank"></i></a>
-    <a href="#welcome-section" class="nav-link">About</a>
-    <a href="#projects" class="nav-link">Work</a>
-    <a href="#contact" class="nav-link">Contact</a>
+    <div class="navbar-icons">
+      <a href="https://twitter.com/gwdurbin" class="twitter-ico nav-ico" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+      <a href="https://github.com/gdurbin" class="github-ico nav-ico" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+      <a href="mailto: gerrettdurbin@gmail.com" class="email-ico nav-ico"><i class="fas fa-envelope-square fa-2x" target="_blank"></i></a>
+    </div>
+    <div class="navbar-sections">
+      <a href="#welcome-section" class="nav-link">About</a>
+      <a href="#projects" class="nav-link">Work</a>
+      <a href="#contact" class="nav-link">Contact</a>
+    </div>
   </nav>
 </header>
   <div id="welcome-section">
     <h1>Hi.  I'm Gerrett, a Fullstack Developer.</h1>
-    <p>I love my family, watching anime, gaming, and I also love creating code to help make the world a better place.</p>
+    <p>I love being with my family, watching anime, reading manga, and gaming.  I also love creating code to help myself and others.</p>
     <p>Some of my coding skills are:</p>
     <ul>
       <li>HTML</li>
@@ -61,7 +65,7 @@
     </div>
   </div>
   <div id="contact">
-    <h2>Contact me.</h2>
+    <h2>Contact me:</h2>
     <a href="https://twitter.com/gwdurbin" class="twitter-ico" target="_blank"><i class="fab fa-twitter-square fa-9x"></i></a>
     <a href="https://github.com/gdurbin" id="profile-link" class="github-ico" target="_blank"><i class="fab fa-github-square fa-9x"></i></a>
     <a href="mailto: gerrettdurbin@gmail.com" class="email-ico"><i class="fas fa-envelope-square fa-9x" target="_blank"></i></a>
